resolve white space issue of pre tag and code optimization

--- a/accessible-code-generator/src/app/home/home.component.scss
+++ b/accessible-code-generator/src/app/home/home.component.scss
@@ -1,5 +1,4 @@
 .pre-custom{
-    overflow-x: auto;
-    white-space: normal;
+    white-space: pre-line;
     font-family: 'Inter', sans-serif;
 }
